--- a/project/src/main/res/values-nl/strings.xml
+++ b/project/src/main/res/values-nl/strings.xml
@@ -609,6 +609,8 @@
     <string name="error_lx_search_message">Je zoekopdracht leverde geen resultaten op. Zoek opnieuw met andere zoekcriteria</string>
     <!-- LX search error -->
     <string name="error_lx_current_location_search_message">We konden je huidige locatie voor lokale activiteiten niet bepalen.</string> 
+    <!-- GT current location search error -->
+    <string name="error_gt_current_location_search_message">We konden je huidige locatie voor lokaal transport niet bepalen.</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">Fout</string>
     <!-- Text for error toolbar-->
@@ -655,6 +657,8 @@
     <string name="lx_error_current_location_toolbar_text">Probeer het opnieuw</string>
     <!-- LX No Activities for Current location -->
     <string name="lx_error_current_location_no_results">We konden geen lokale activiteiten vinden. Zoek opnieuw met andere zoekcriteria</string>
+    <!-- LX No Activities for Current location -->
+    <string name="gt_error_current_location_no_results">We konden geen lokaal transport vinden. Zoek opnieuw met andere zoekcriteria.</string>
 
     <!-- Ground Transport bags text-->
     <string name="lx_ground_transport_bags_text">%1$sStuks bagage</string>
@@ -2757,10 +2761,23 @@
     <string name="total_price_for_stay">Totaalprijs voor verblijf</string>
     <!-- Rate price for entire list, encompasses a group of hotel properties -->
     <string name="prices_avg_per_night">Gemiddelde prijs, per nacht</string>
+
     <!-- Hotel Results Pricing Header - Prices Avg Per Night along with the Number of Search Results -->
-    <string name="hotel_results_pricing_header_prices_avg_per_night_TEMPLATE">Gemiddelde prijzen per nacht • {count} resultaten</string>
+    <plurals name="hotel_results_pricing_header_prices_avg_per_night_TEMPLATE">
+        <item quantity="zero">Geen resultaten</item>
+        <item quantity="one">Gemiddelde prijzen per nacht • 1 resultaat</item>
+        <item quantity="many">Gemiddelde prijzen per nacht • %d resultaten</item>
+        <item quantity="other">Gemiddelde prijzen per nacht • %d resultaten</item>
+    </plurals>
+
     <!-- Hotel Results Pricing Header - Total Price For Stay along with the Number of Search Results -->
-    <string name="hotel_results_pricing_header_total_price_for_stay_TEMPLATE">Totaalprijs voor verblijf • {count} resultaten</string>
+    <plurals name="hotel_results_pricing_header_total_price_for_stay_TEMPLATE">
+        <item quantity="zero">Geen resultaten</item>
+        <item quantity="one">Totaalprijs voor verblijf • 1 resultaat</item>
+        <item quantity="many">Totaalprijs voor verblijf • %d resultaten</item>
+        <item quantity="other">Totaalprijs voor verblijf • %d resultaten</item>
+    </plurals>
+
     <!-- Warning if there are only a few rooms left where %d represents the number of rooms left -->
     <plurals name="number_of_rooms_left">
         <item quantity="zero">Geen kamers vrij!</item>
@@ -2949,6 +2966,8 @@
     <!-- About activity -->
     <!-- Label for "Booking Support" button in info page -->
     <string name="booking_support">Hulp bij het boeken</string>
+    <!-- Subject for loyalty email on Itin -->
+    <string name="support_request">Ondersteuningsverzoek</string>
     <!-- Title for different ways to connect to Expedia -->
     <string name="contact_via_TEMPLATE">Neem contact op met {brand} via …</string>
     <!-- Contact Expedia via phone -->
@@ -3699,10 +3718,6 @@
 
     <!-- Filters Strings -->
     <string name="neighborhoods">Buurten</string>
-    <string name="gym">Fitnesscentrum</string>
-    <string name="room_service">Roomservice</string>
-    <string name="business_center">Businesscentrum</string>
-    <string name="accessible">Rolstoeltoegankelijk</string>
     <string name="amenities">Voorzieningen</string>
     <string name="plus_vip">+VIP</string>
     <string name="star_rating">Sterrenclassificatie</string>
