--- a/project/src/airAsiaGo/res/values/strings.xml
+++ b/project/src/airAsiaGo/res/values/strings.xml
@@ -11,16 +11,10 @@
     <string name="logout_confirmation_aag">Are you sure you want to log out of your AirAsiaGo account?</string>
 
 
-
-
-
-
-
     <!-- Contact AirAsiaGo via email subject -->
     <string name="contact_aag_email_subject">AirAsiaGo Reservations Support</string>
 
     <string name="loading_air_asia_routes_aag">Loading AirAsiaGo routes…</string>
-
 
 
     <!-- Message displayed when the hotel room is sold out -->
@@ -45,4 +39,12 @@
     <string name="dialog_message_launch_aag_mobile_site">Launch the AirAsiaGo mobile website?</string>
     <!-- Label for Flight Search in task manager -->
     <string name="Expedia_Flights">AirAsiaGo Flights</string>
+
+    <!-- Account Creation Strings -->
+    <!-- Button text for account creation button -->
+    <string name="acct_Create_an_aag_account">Create an AirAsiaGo account</string>
+    <!-- Message displayed after a successful create account -->
+    <string name="acct_Welcome_to_aag">Welcome to AirAsiaGo</string>
+    <!-- Title of "Account Already Exists" error dialog box -->
+    <string name="acct_aag_account_already_exists">An AirAsiaGo account already exists with this email</string>
 </resources>
